# duty-duck

./: .continuerules  .env  .env.example  .gitignore  Cargo.toml  DutyDuck.session.sql  Justfile  README.md  build.rs  docker-compose.yml  migrations.Dockerfile  package-lock.json  package.json  realm-export.json  rspack.config.mjs
components/cli/: Cargo.toml
components/cli/src/: config.rs  config_subcommands.rs  main.rs  tasks_subcommands.rs  user_subcommands.rs
components/cli/test-scripts/: failure-task.sh  failure.sh  success-task.sh  success.sh
server/: Cargo.toml  Dockerfile  build.rs
server/.sqlx/: query-0cb0212a6b5c40145b69138dcce72097e48d86529294f96d19b737ebbeb50db2.json  query-1c628dc5f0e4ff3c7dc45cc779589540cd6c959b9f54872cae2ea89ad7e7ae65.json  query-1cb3c5eb379b8dcff30561fb2d36fab82686bfaf313262a300f5c2cfab51d021.json  query-228dab8c5762fa3b34090b784a4c667168d266b4a467f9a512b5cb55bc5548a1.json  query-28407c175ae34073f6f4ee86ed0f892ba11c1877427176f8ec6aed8834593841.json  query-32293ecf7bf08a81d32417e47ee4d4a72f78eba4b3d1b91df866a3a19850ca92.json  query-3e3935cb2400e34fadeab3ba4604f0ad61f312e54c66b660a4a8ebb2b8b9fa1e.json  query-437d759fa6d575fc780dd3414648ec88269172296a9795ed0f144c8076709c67.json  query-5991c8431652dd3b1ac3d051685bddd826904a2956019338a79e5b44c2955404.json  query-5acc7eae3b15d0585c4050f42efda17ddfb3448a082f864abd53ab4b102ef00c.json  query-6042662b02ee8ce4e1308879b3bb483cb458d33860b1a86f27b4cacf32f3efbd.json  query-68c6d229f2a80254107f53407f6e3ac75f364a384e4e8a7b47e4bef93a4e9baf.json  query-71226006868e89e651dfb30d6a7f0b1d397c54ff3368ffe9683d759a1b205727.json  query-75a51cee79878d29f4c49ec7f5b8ebe718d6c2793a603a1df7d1fb1777ae4b71.json  query-7af7d1b4eff8e5601c992908c5c9623afa49168318884e40798c99a29611ab2f.json  query-7fb171e525c82ac2eae05c0b4cde360dd837e92f08253798a7f10cc882578344.json  query-83c85ec059705480549404520a6d5aaab65de95d1d61abee4877ed0dfa477a55.json  query-87b791d5ff30aabad5d47d432a7f1c6a5546b06e7f456a564d04011e027a72d4.json  query-9fa20d0cb027f03d5debec2d538f1b75a677f8f047c892f14a9428249b9e1c66.json  query-a2d5458d1a7f4428332b5f5c9ae9c257692114dd8e7d7ec5f331e39e4d28ffd1.json  query-aade354efc9c8bffd0454031c2377d02edf4814e2169d7a751773f0410de7ece.json  query-afcb643c6bed9c18cbfca54f310be13b422d648881fd2ef483d9d52eb7ad19ef.json  query-b84382ba46a319d8a06e98963cab00f9efe251f7d8b752383bcdfb2e059a2154.json  query-bf053dc2684014e3651f7fc7e1036a67d045bc367ec00a8dcd73d4b3c876bcc4.json  query-bf12cd0a8a0d91467c7eb35753aba0b0de71a89bf2400fcb2f88d38c985d0e8d.json  query-c145f4d35e06e1035440d6e3344964bb6318a3c3597c948329c62991a14cd1ff.json  query-ceeea2b7677270116d1bb3feb5a2caa60d3fd1d13c537a189c668ef8e02d8d6e.json  query-df0622e3eddac10ef4809c08238eb4f91ec5c78c7c6c79a4ce25e6996ec70fff.json  query-e016490fa61fa5a82f604cbbc60577f42fd21d2ad0560ba2747eb0df7614ed31.json  query-e42a27ade8e328f76ac9b7a0b01a3a572462fae07a2f31a1634c3624b6079066.json  query-ee0e3efd9e55f04f2de713d19d553162e552217f7fb2c7bbc33a58f1f468e3a1.json  query-ee2b8e08bf3a0268adfaae2303092434e6c645b0416b158f41abcd20fdbb598c.json  query-f66f3376cb733e4711f854ea785f16028ba01dc177df5943d3a80962c3c57755.json  query-fe7319689e2f7c9ae1ba7b54ca93a14a3222bd0b7f1ad3934e4951cd1a9a5d5a.json
server/bindings/: AcceptInvitationCommand.ts  ChangeMemberRoleCommand.ts  CommentIncidentRequest.ts  CommentPayload.ts  CreateApiTokenRequest.ts  CreateApiTokenResponse.ts  CreateHttpMonitorCommand.ts  EntityMetadata.ts  FilterableMetadataItem.ts  GetIncidentResponse.ts  GetIncidentTimelineParams.ts  GetIncidentTimelineResponse.ts  GetProfileResponse.ts  HttpMonitor.ts  HttpMonitorErrorKind.ts  HttpMonitorIncidentCause.ts  HttpMonitorIncidentCausePing.ts  HttpMonitorStatus.ts  Incident.ts  IncidentCause.ts  IncidentEvent.ts  IncidentEventPayload.ts  IncidentEventType.ts  IncidentPriority.ts  IncidentSource.ts  IncidentSourceType.ts  IncidentSourceWithDetails.ts  IncidentStatus.ts  IncidentWithSources.ts  IncidentWithSourcesDetails.ts  IncidentWithUsers.ts  ListApiAccessTokensResponse.ts  ListHttpMonitorsParams.ts  ListHttpMonitorsResponse.ts  ListIncidentsParams.ts  ListIncidentsResponse.ts  ListOrganizationMembersItem.ts  OrderDirection.ts  Organization.ts  OrganizationUserRole.ts  (+13 more)
server/locales/: app.yml
server/migrations/: 20240702140119_add_http_monitors.down.sql  20240702140119_add_http_monitors.up.sql  20240803110019_create_incidents.down.sql  20240803110019_create_incidents.up.sql  20240828074110_user_devices_table.down.sql  20240828074110_user_devices_table.up.sql  20240902155631_install_pg_extensions.up.sql  20241004065257_simplify-incidents-data-model.sql.up.sql  20241004125500_add-incidents-timeline.down.sql  20241004125500_add-incidents-timeline.up.sql  20241007121828_incidents_acknowledgments.down.sql  20241007121828_incidents_acknowledgments.up.sql  20241011075018_add_api_acess_tokens.down.sql  20241011075018_add_api_acess_tokens.up.sql  20241108142002_monitor-and-incident-metadata.down.sql  20241108142002_monitor-and-incident-metadata.up.sql  20241113210157_unique-constraint-on-ongoing-incidents.sql.down.sql  20241113210157_unique-constraint-on-ongoing-incidents.sql.up.sql  20241115130516_add_request_parameters_to_monitor.down.sql  20241115130516_add_request_parameters_to_monitor.up.sql  20241115130700_http_monitor_archived.down.sql  20241121150524_partition-events-table.up.sql
server/src/: main.rs
server/src/application/: application_config.rs  application_state.rs  built_info.rs  mod.rs
server/src/application/server/: auth_context_extractor.rs  file_router.rs  http_monitors_router.rs  incidents_router.rs  mod.rs  openapi.rs  organizations_router.rs  paginations_params.rs  users_router.rs
server/src/domain/: mod.rs
server/src/domain/entities/: authorization.rs  entity_metadata.rs  http_monitor.rs  incident.rs  incident_event.rs  incident_notification.rs  mod.rs  organization.rs  push_notification.rs  user.rs  user_device.rs
server/src/domain/ports/: http_client.rs  http_monitor_repository.rs  incident_event_repository.rs  (+10 more)
server/src/infrastructure/: keycloak_client.rs  mod.rs
(+826 files in other folders)
