[workspace]
members = [".", "entity", "migration"]

[package]
name = "uptime-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

# Crates.io depend
anyhow = "1.0.86"
axum = "0.7.5"
askama = "0.12.1"
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rust-embed = "8.4.0"
mime_guess = "2.0.4"
serde.workspace = true
serde_json = "1.0.117"
askama_axum = "0.4.0"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
sea-orm.workspace = true
tokio.workspace = true

[workspace.dependencies]
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
