[workspace]
members = [".", "entity", "migration"]

[package]
name = "uptime-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

# Crates.io depend
anyhow = "1.0.86"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rust-embed = "8.4.0"
mime_guess = "2.0.4"
serde.workspace = true
serde_json = "1.0.117"
askama_axum = { git = "https://github.com/djc/askama", rev = "627d58bc3b93c484f190d0711a4f9a9e26bc062c" }
askama = { git = "https://github.com/djc/askama", rev = "627d58bc3b93c484f190d0711a4f9a9e26bc062c" }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
sea-orm.workspace = true
tokio.workspace = true
email_address = "0.2.4"
zxcvbn = "2.2.2"
dotenv = "0.15.0"
thiserror = "1.0.61"
argon2 = "0.5.3"
lettre = { version = "0.11.7", features = [
    "tokio1-rustls-tls",
    "rustls-tls",
    "builder",
    "smtp-transport",
], default-features = false }
itertools = "0.13.0"
rusty_paseto = "0.6.1"
url = "2.5.0"
urlencoding = "2.1.3"
cucumber = "0.21.0"

[dev-dependencies]
thirtyfour = "0.32.0"
once_cell = "1.19"

[workspace.dependencies]
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }

[[test]]
name = "end_to_end"
harness = false 