[workspace]
edition = "2021"
resolver = "2"
members = [
    "components/server",
    "components/cli", 
    "components/api-client-rs",
]

[workspace.dependencies]
api-client-rs = { path = "components/api-client-rs" }

url = "2.5.3"
croner = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
futures = "0.3.30"
futures-util = "0.3.30"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.118"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
