[package]
name = "server"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
lettre = { version = "0.11.8", features = ["tokio1", "tokio1-native-tls"] }
veil = "0.1.7"
async-trait = "0.1.81"
gcp_auth = "0.12.2"
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
url = "2.5.3"
maplit = "1.0.2"
nanoid = "0.4.0"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
openidconnect = "3.5.0"
itertools = "0.13.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
backon = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
ts-rs = { version = "10.0.0", features = [
    "chrono-impl",
    "uuid-impl",
    "serde-json-impl",
] }
uuid = { version = "1.9", features = ["serde"] }
zxcvbn = { version = "3.0.1", features = ["ser"] }
email_address = "0.2.4"
regex = "1.10.5"
moka = { version = "0.7.1", features = ["future"] }
lazy_static = "1.5.0"
envconfig = "0.10.0"
dotenv = "0.15.0"
tower-http = { version = "0.5", features = ["trace", "timeout", "cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
] }
rand = "0.8.5"
jsonwebtoken = "=9.3.0"
bigdecimal = "0.4.5"
rust-i18n = "3.1.2"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-redoc = { version = "4", features = ["axum"] }
hex = "0.4.3"
aws-sdk-sns = "1.47.0"
aws-config = "1.5.8"
phonenumber = "0.3.6"
tonic = "0.12.3"
prost = "0.13.3"

[build-dependencies]
built = { version = "0.7.3", features = ["chrono", "git2"] }
tonic-build = "0.12"
