[package]
name = "dutyduck_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
futures.workspace = true
futures-util.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = "4.5"
