[package]
name = "dutyduck_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
api-client-rs.workspace = true

chrono.workspace = true
futures.workspace = true
futures-util.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1"
